[package]
name = "nes"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }
bitflags = "2.4.0"
softfloat = { version = "1.0.0", optional = true }

[dependencies.emumisc]
path = "../emumisc"

[dependencies.mos6502]
path = "../mos6502"
default-features = false

[dev-dependencies.nes-testsuite]
path = "../nes-testsuite"

[dev-dependencies.rp2c02-testsuite]
path = "../rp2c02-testsuite"

[features]
default = ["std"]
std = ["mos6502/std", "log", "log/std"]
softfloat = ["dep:softfloat"]
