[package]

name = "pinky-devui"
version = "0.1.0"
authors = [ "Jan Bujak <j@exia.io>" ]

[[bin]]

name = "pinky-devui"

[dependencies]
sdl2 = "0.27"
clock_ticks = "0.1"
serde_json = "0.7"
md5 = "0.1"
env_logger = "0.3"

[dependencies.emumisc]
path = "../emumisc"

[dependencies.nes]
path = "../nes"

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
