[package]
name = "pinky-web"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]

[dependencies]
serde = "1"
serde_derive = "1"

[dependencies.stdweb]
version = "0.4"

[dependencies.nes]
path = "../nes"

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
